--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="smallscreen.css" media="screen and (max-width: 640px)">
+  <link rel="stylesheet" href="print.css" media="print">
 </head>
 <body>
   <app-root></app-root>
